tests/baselines/reference/accessStaticMemberFromInstanceMethod01.errors.txt
accessStaticMemberFromInstanceMethod01.ts(5,17): error TS2304: Cannot find name 'foo'.


==== accessStaticMemberFromInstanceMethod01.ts (1 errors) ====
    class C {
        foo: string;
    
        static bar() {
            let k = foo;
                    ~~~
!!! error TS2304: Cannot find name 'foo'.
        }
    }